@@ -3,30 +3,77 @@ package bank.core;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.*;
 
 @SuppressWarnings("BooleanMethodIsAlwaysInverted")
 public class BankAutomated
 {
-    List<CA> customerAccounts = Collections.synchronizedList(new ArrayList<CA>());
-    private final ConcurrentHashMap<String, CA> customerHash;
-    private final ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+    List<CA> customerAccounts = Collections.synchronizedList(new ArrayList<>());
+    private final ConcurrentHashMap<String, CA> customerHash = new ConcurrentHashMap<>();
+    ArrayList<AD> admins = new ArrayList<>();
+    ArrayList<MT> maintenanceTeam = new ArrayList<>();
+    ArrayList<CSR> customerService = new ArrayList<>();
+    /*
+     * Constructor for BankAutomated to be used for the TestCase (for the JUnit test cases)
+     * This prevents the people.ser file from interfering with the test case results
+     */
+    public BankAutomated(boolean ignoredTest){
+        AD admin = new AD("Mister", "Admin", "admin@BCS.ca", "1234567890", 0);
+        AD admin2 = new AD("Mister", "Admin2", "admin2@BCS.ca", "1112223333", 1);
+        AD admin3 = new AD("Mister", "Admin3", "admin3@BCS.ca", "2223334444", 2);
+        AD admin4 = new AD("Mister", "Admin4", "admin4@BCS.ca", "3334445555", 3);
+        AD admin5 = new AD("Mister", "Admin5", "admin5@BCS.ca", "4445556666", 4);
 
-    @SuppressWarnings("SpellCheckingInspection")
-    public enum State {REGISTER, FORGOT, HOME, ACCOUNT, ETRANS, BANKTRANS, FUNDTRANS, MEETREQ, MAKEREP, LOCATE,
-                        NOTIF, NOTIFSET, PRIVSET, EDITPROF, SETTINGS}
+        MT maintenance = new MT ("Mister", "Maintenance", "maintenance@BCS.ca", "1234567890", 0);
+        MT maintenance2 = new MT ("Mister", "Maintenance2", "maintenance2@BCS.ca", "1123456789", 1);
+        MT maintenance3 = new MT ("Mister", "Maintenance3", "maintenance3@BCS.ca", "1234567800", 2);
+        MT maintenance4 = new MT ("Mister", "Maintenance4", "maintenance4@BCS.ca", "1234567901", 3);
+        MT maintenance5 = new MT ("Mister", "Maintenance5", "maintenance5@BCS.ca", "1224567890", 4);
 
-    // Test constructor
-    public BankAutomated(boolean test) {
-        this.customerHash = new ConcurrentHashMap<>();
+        CSR customerService1 = new CSR("Mister", "CustomerService1", "customerservice@BCS.ca", "123456789", 0);
+        CSR customerService2 = new CSR("Mister", "CustomerService2", "customerservice2@BCS.ca", "121456789", 1);
+        CSR customerService3 = new CSR("Mister", "CustomerService3", "customerservice3@BCS.ca", "112456789", 2);
+        CSR customerService4 = new CSR("Mister", "CustomerService4", "customerservice4@BCS.ca", "123456889", 3);
+        CSR customerService5 = new CSR("Mister", "CustomerService5", "customerservice5@BCS.ca", "123567899", 4);
+
+        admins.add(admin); admins.add(admin2); admins.add(admin3); admins.add(admin4); admins.add(admin5);
+        maintenanceTeam.add(maintenance); maintenanceTeam.add(maintenance2); maintenanceTeam.add(maintenance3);
+        maintenanceTeam.add(maintenance4); maintenanceTeam.add(maintenance5);
+        customerService.add(customerService1); customerService.add(customerService2); customerService.add(customerService3);
+        customerService.add(customerService4); customerService.add(customerService5);
     }
+    
+    /*
+     * Constructor for the BankAutomated class
+     * NOTE: DO NOT TOUCH
+     */
+    public BankAutomated()
+    {
+        AD admin = new AD("Mister", "Admin", "admin@BCS.ca", "1234567890", 0);
+        AD admin2 = new AD("Mister", "Admin2", "admin2@BCS.ca", "1112223333", 1);
+        AD admin3 = new AD("Mister", "Admin3", "admin3@BCS.ca", "2223334444", 2);
+        AD admin4 = new AD("Mister", "Admin4", "admin4@BCS.ca", "3334445555", 3);
+        AD admin5 = new AD("Mister", "Admin5", "admin5@BCS.ca", "4445556666", 4);
 
-    // Normal constructor
-    public BankAutomated() {
-        // Email -> Account, thread safe Hash map
-        this.customerHash = new ConcurrentHashMap<>();
+        MT maintenance = new MT ("Mister", "Maintenance", "maintenance@BCS.ca", "1234567890", 0);
+        MT maintenance2 = new MT ("Mister", "Maintenance2", "maintenance2@BCS.ca", "1123456789", 1);
+        MT maintenance3 = new MT ("Mister", "Maintenance3", "maintenance3@BCS.ca", "1234567800", 2);
+        MT maintenance4 = new MT ("Mister", "Maintenance4", "maintenance4@BCS.ca", "1234567901", 3);
+        MT maintenance5 = new MT ("Mister", "Maintenance5", "maintenance5@BCS.ca", "1224567890", 4);
+
+        CSR customerService1 = new CSR("Mister", "CustomerService2", "customerservice@BCS.ca", "123456789", 0);
+        CSR customerService2 = new CSR("Mister", "CustomerService2", "customerservice2@BCS.ca", "121456789", 1);
+        CSR customerService3 = new CSR("Mister", "CustomerService3", "customerservice3@BCS.ca", "112456789", 2);
+        CSR customerService4 = new CSR("Mister", "CustomerService4", "customerservice4@BCS.ca", "123456889", 3);
+        CSR customerService5 = new CSR("Mister", "CustomerService5", "customerservice5@BCS.ca", "123567899", 4);
+
+        admins.add(admin); admins.add(admin2); admins.add(admin3); admins.add(admin4); admins.add(admin5);
+        maintenanceTeam.add(maintenance); maintenanceTeam.add(maintenance2); maintenanceTeam.add(maintenance3);
+        maintenanceTeam.add(maintenance4); maintenanceTeam.add(maintenance5);
+        customerService.add(customerService1); customerService.add(customerService2); customerService.add(customerService3);
+        customerService.add(customerService4); customerService.add(customerService5);
 
         System.out.println("Loading customer objects...");
 
@@ -51,6 +98,7 @@ public class BankAutomated
             // Submit each account to the executor for processing
             List<Future<Void>> futures = new ArrayList<>();
             for (CA account : accounts) {
+                ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
                 futures.add(executor.submit(() -> {
                     customerAccounts.add(account);
                     customerHash.put(account.email, account);
@@ -69,12 +117,14 @@ public class BankAutomated
 
         } catch (FileNotFoundException ex) {
             // usually means nothing is inside
+            System.out.println("File is empty");
         } catch (IOException ex) {
             // System.out.println("nothing inside");
             // usually means the file is corrupted or nothing inside
             // ex.printStackTrace();
         } catch (ClassNotFoundException ex) {
             // the CA object that was serialized was changed after it had been serialized
+            clearPeopleFile();
         }
 
         long endTime = System.currentTimeMillis();
@@ -83,15 +133,20 @@ public class BankAutomated
         System.out.println("Loaded " + customerAccounts.size() + " customer objects. In: " + timePassedSeconds + "s");
     }
 
-    // Clear the People.ser file
+    /* 
+     * Clears the People.ser file
+     * NOTE: This will delete all customer accounts DO NOT TOUCH
+     * 
+     */
     public void clearPeopleFile() {
         try {
 
             // Delete the file
-            Files.deleteIfExists(Paths.get("People.ser"));
+            Path of = Path.of("People.ser");
+            Files.deleteIfExists(of);
     
             // Create a new empty file
-            Files.createFile(Paths.get("People.ser"));
+            Files.createFile(of);
             
             // Print a message
             System.out.println("Cleared People.ser file");
@@ -104,7 +159,24 @@ public class BankAutomated
         }
     }
 
-    // Validate email format
+    /*
+     * Changes the password of a user
+     * @param CA user The user to change the password of
+     * @param String newPassword The new password of the user
+     * 
+     */
+    public void changePassword(CA user, String newPassword){
+
+        user.setPassword(newPassword);
+
+    }
+
+    /*
+     * Checks if the email is valid
+     * @param String email The email to check
+     * @return boolean True if the email is valid, false otherwise
+     * 
+     */
     public boolean validEmail(String email)
     {
         if (email.contains("@"))
@@ -119,13 +191,23 @@ public class BankAutomated
                 ( (email.indexOf(".com") - email.indexOf("@") >= 2) || (email.indexOf(".ca") - email.indexOf("@") >= 2) );
     }
 
-    //Checks if email already exists
+    /*
+     * Checks if the email is already in use
+     * @param String email The email to check
+     * @return boolean True if the email is already in use, false otherwise
+     * 
+     */
     public boolean existingEmail(String email)
     {
         return customerHash.containsKey(email);
     }
 
-    // Validate password format
+    /*
+     * Checks if the password is valid
+     * @param String password The password to check
+     * @return boolean True if the password is valid, false otherwise
+     * 
+     */
     public boolean validPassword(String password)
     {
         if (password.length() < 8)
@@ -164,13 +246,20 @@ public class BankAutomated
         return lowerCharCount > 0 && upperCharCount > 0 && numCount > 0 && specialCount > 0;
     }
 
-    // This allows a CA to log in to the system, and authenticates this user
+    /*
+     * Creates a new customer account
+     * @param String email The email of the customer
+     * @param String password The password of the customer
+     * @return CA The customer account if it was created successfully, null otherwise
+     * NOTE: DO NOT TOUCH THIS METHOD
+     *
+     */
     public CA loginAccount(String email, String password)
     {
         System.out.println("Logging in customer with email: " + email);
 
         // Multithreaded Stream
-        CA customer = (CA) customerHash.get(email);
+        CA customer = customerHash.get(email);
         if (customer != null && password.equals(customer.password)) {
             return customer;
         }
@@ -179,7 +268,12 @@ public class BankAutomated
         return null;
     }
 
-    // Checks if the string contains numbers only
+    /*
+     * Checks if the string contains numbers only
+     * @param string str The string to check
+     * @return boolean True if the string contains numbers only, false otherwise
+     * 
+     */
     public boolean onlyNumeric(String str)
     {
         for(int i = 0; i < str.length(); i++)
@@ -193,7 +287,34 @@ public class BankAutomated
         return true;
     }
 
-    // Checks if the CVV of the card is valid.
+    /*
+     * Checks if the string contains numbers only (allows up to one decimal point for doubles)
+     * @param String str The string to check
+     * @return boolean True if the string contains numbers only, false otherwise
+     * 
+     */
+    public boolean onlyNumericDouble(String str) {
+        int dotCount = 0;
+        char[] chars = str.toCharArray();
+        for (char c : chars) {
+            if (c == '.') {
+                dotCount++;
+                if (dotCount > 1) {
+                    return false;
+                }
+            } else if (c < '0' || c > '9') {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    /*
+     * Checks if the credit card number is valid
+     * @param String ccv The credit card number
+     * @return boolean True if the credit card number is valid, false otherwise
+     *
+     */
     public boolean validCVV(String cvv)
     {
         if (onlyNumeric(cvv))
@@ -204,7 +325,14 @@ public class BankAutomated
         return false;
     }
 
-    // Checks if the date of birth is valid
+    /*
+     * Checks if the date of birth is valid
+     * @param String month The month of the date of birth
+     * @param String day The day of the date of birth
+     * @param String year The year of the date of birth
+     * @return boolean True if the date of birth is valid, false otherwise
+     * 
+     */
     public boolean validDOB(String month, String day, String year)
     {
         int numYear = Integer.parseInt(year);
@@ -227,88 +355,66 @@ public class BankAutomated
         }
     }
 
-    //Checks for the validity of the card number by various measures, i.e. length, starting digit, Luhn's algorithm
-    public boolean validCard(String cardNum)
-    {
-        // If the length is not between 13 and 19 digits, then the card number is invalid
-        // If input was not all digits, then cardNum is invalid
-        // Card numbers only start with 4 (Visa), 3 (American Express), 2 or 5 (Mastercard)
-
-        if (cardNum.length() < 13 || cardNum.length() > 19 || !onlyNumeric(cardNum) ||
-                !(cardNum.charAt(0) == '4' || cardNum.charAt(0) == '3' || cardNum.charAt(0) == '2' || cardNum.charAt(0) == '5'))
-        {
-            return false;
-        }
-
-        // Luhn's algorithm to check if the card number is valid
-        int sum = 0;
-        boolean alternate = false;
-
-        // Loop through the card number backwards
-        for (int i = cardNum.length() - 1; i >= 0; i--)
-        {
-
-            // Get the digit at the current index
-            int n = cardNum.charAt(i) - '0';
-
-            // If the current digit is the second digit from the right, then double it
-            if (alternate)
-            {
-                n = n*2;
-            }
-
-            // If the current digit is greater than 9, then add the two digits together
-            if (n>9)
-            {
-                sum += (n/10);
-                sum += n%10;
-            }
-
-            // Else, add the current digit to the sum
-            else
-            {
+    /*
+     * Checks if the credit card number is valid
+     * @param String cardNum The credit card number
+     * @return boolean True if the card number is valid, false otherwise
+     * 
+     */
+    public boolean validCard(String cardNum) {
+        boolean valid;
+    
+        // Check length, starting digit, and only numeric
+        if (!(cardNum.length() >= 13 && cardNum.length() <= 19 && onlyNumeric(cardNum) &&
+            (cardNum.charAt(0) == '4' || cardNum.charAt(0) == '3' || cardNum.charAt(0) == '2' || cardNum.charAt(0) == '5'))) {
+            valid = false;
+        } else {
+            int sum = 0;
+            boolean alternate = false;
+    
+            // Luhn's algorithm
+            for (int i = cardNum.length() - 1; i >= 0; i--) {
+                int n = cardNum.charAt(i) - '0';
+                if (alternate) {
+                    n *= 2;
+                    if (n > 9) {
+                        n -= 9;
+                    }
+                }
                 sum += n;
+                alternate = !alternate;
             }
-
-            // Alternate between true and false
-            alternate = !alternate;
+            valid = sum % 10 == 0;
         }
-
-        // If the sum is divisible by 10, then the card number is valid
-        return sum % 10 == 0;
+    
+        return valid;
     }
 
-    // This function returns
-
-    // This allows a new client to register for an account by inputting their details
+    /*
+     * This function creates a new customer account, and returns the new account if it was created successfully.
+     * If the account was not created successfully, then it returns null.
+     * The account is not created successfully if the email is already in use, if the email is not valid, if the password is not valid,
+     * or if the card number is not valid.
+     * @param String firstName: The first name of the customer
+     * @param String lastName: The last name of the customer
+     * @param String phoneNum: The phone number of the customer
+     * @param String address: The address of the customer
+     * @param String gender: Gender of the customer
+     * @param String dob: Date of birth of the customer
+     * @param String email: Email of the customer
+     * @param String password: Password of the customer
+     * @param String cardNum: Card number of the customer
+     * @param String cardExpiry: Expiry date of the card
+     * @param String cvv: CVV of the card
+     * @return CA The new customer account if it was created successfully, null otherwise
+     * 
+     */
     public CA createAccount(String firstName, String lastName, String phoneNum, String address, String gender, String dob,
                             String email, String password, String cardNum, String cardExpiry, String cvv)
     {
-        // Check if email already exists in the ConcurrentHashMap
-        if (existingEmail(email))
-        {
-            System.out.println("Email already exists");
-            return null;
-        }
 
-        // Check if email is valid
-        if (!validEmail(email))
-        {
-            System.out.println("Email is invalid");
-            return null;
-        }
-
-        // Check if password is valid
-        if (!validPassword(password))
-        {
-            System.out.println("Password is invalid");
-            return null;
-        }
-
-        // Check if card number is valid
-        if (!validCard(cardNum))
-        {
-            System.out.println("Card Number is invalid");
+        // Check if the email is already in use, if the email is valid, if the password is valid, and if the card number is valid
+        if (existingEmail(email) || !validEmail(email) || !validPassword(password) || !validCard(cardNum)) {
             return null;
         }
 
@@ -322,52 +428,340 @@ public class BankAutomated
         return customer;
     }
 
-    // Allows customers to create a report about any suspicious activity, one for customers without
-    // accounts, and one for logged in customers
-    public void makeReport(String customerFName, String customerLName, String email)
+    /*
+     * Adds a report to the customer's report list and the admin's report list
+     * @param CA customer The customer who made the report
+     * Returns the report created
+     */
+    public Report makeReport(CA customer, String description)
     {
+        // Get random admin that receives the report
+        Random rand = new Random();
+        int randIndex = rand.nextInt(admins.size()-1);
+        AD admin = admins.get(randIndex);
 
-    }
-    public void makeReport(CA customer)
-    {
+        // Create a new report object
+        Report report = new Report(customer, admin, description);
 
-    }
+        // Add the report to the list of reports
+        customer.addReport(report);
+        admin.addCustomerReports(report);
 
-    // Depending on request type, this gets the correct receiver and adds the customer request to their
-    // correct argument (Request arraylist)
-    public void makeRequest(String type)
-    {
-
-    }
-
-    // Allow users to transfer between chequing and savings accounts
-    public void transferFunds(int transferAmount, String fromAccount, String toAccount)
-    {
-
+        return report;
     }
 
-    // Allow users to etransfer from their account to another user with using the receiver's email
-    public void etransfer(int amount, String receiverEmail)
-    {
+    /*
+     * This function allows a customer to make a request. It returns true if the request was made successfully, and false otherwise.
+     * Allowing the customer to make a request about a technical issue, a maintenance issue, or a customer service issue.
+     * @param CA customer The customer who made the request
+     * @param String type The type of request
+     * @return boolean True if the request was made successfully, false otherwise
+     * 
+     */
+    public void makeRequest(CA customer, String type, String str) {
+
+        Request request;
+
+        Random rand = new Random();
+        int randIndex;
+
+        switch(type){
+            case "1": // Maintenance
+                randIndex = rand.nextInt(maintenanceTeam.size()-1);
+                MT maintenance = maintenanceTeam.get(randIndex);
+                request = new Request(type, maintenance, str);
+                maintenance.addSysRequest(request);
+                break;
+            case "2": // Technical
+                randIndex = rand.nextInt(admins.size()-1);
+                AD admin = admins.get(randIndex);
+                request = new Request(type, admin, str);
+                admin.addMeetingRequests(request);
+                break;
+            case "3": // Customer Service
+                randIndex = rand.nextInt(customerService.size()-1);
+                CSR csr = customerService.get(randIndex);
+                request = new Request(type, csr, str);
+                csr.addRequest(request);
+                break;
+            default:
+                return;
+        }
+
+        customer.addRequests(request);
 
     }
 
-    // Allow users to make a bank transfer from their account to another user using the receiver's
-    // bank account number
-    public void bankTransfer(int amount, String receiverAcc)
-    {
+    /*
+     * Allows users to transfer money between their chequing and savings accounts
+     * @param double transferAmount: amount of money to transfer
+     * @param String fromAccount: account to transfer money from
+     * @param CA customer: customer object
+     * @return int 0 if transfer is successful, 1 if transfer is unsuccessful, 2 if amount is too small
+     * 
+     */
+    public int transferFunds(double transferAmount, String fromAccount, CA customer) {
+
+        //if transfer amount is less than 0.5, then return 2 to make an error
+        if (transferAmount < 0.5)
+        {
+            return 2;
+        }
+
+        Random rand = new Random();
+        int idSender = rand.nextInt(500);
+        int idReceiver = rand.nextInt(500);
+        if (fromAccount.equals("Chequing")) {
+
+            if (transferAmount > customer.getChequing()) {
+
+                return 1;
+
+            }
+            Transaction transaction = new Transaction("Chequing", "Savings", transferAmount,idSender);
+            transaction.setAccountFrom("Chequing");
+            transaction.setSenderRemaining(customer.getChequing() - transferAmount);
+            transaction.setReceiverRemaining(customer.getSavings() + transferAmount);
+
+            customer.setChequing(customer.getChequing() - transferAmount);
+            customer.setSavings(customer.getSavings() + transferAmount);
+            customer.addChequing(transaction);
+            customer.addSaving(transaction);
+
+        } else {
+
+            if (transferAmount > customer.getSavings()) {
+
+                return 1;
+                
+            }
+
+            Transaction transaction = new Transaction("Savings", "Chequing", transferAmount, idReceiver);
+            transaction.setAccountFrom("Savings");
+            transaction.setSenderRemaining(customer.getChequing() - transferAmount);
+            transaction.setReceiverRemaining(customer.getSavings() + transferAmount);
+
+            customer.setChequing(customer.getChequing() + transferAmount);
+            customer.setSavings(customer.getSavings() - transferAmount);
+            customer.addChequing(transaction);
+            customer.addSaving(transaction);
+
+        }
+        return 0;
 
     }
 
-    // Change the customer's details in the settings tab. Customers can change their address, email,
-    // and phone number
-    public void changeSettings(CA customer)
-    {
+    /*
+     * Allows users to transfer money to other users of the bank (if they have an account)
+     * @param double amount: amount of money to transfer
+     * @param String receiverEmail: email of the receiver
+     * @param CA customer: the customer who is sending the money
+     * @param String accountFrom: the account the money is being sent from
+     * @return int 0 if successful, 1 if receiver does not have an account, 2 if insufficient funds, 3 if receiver is not in BCS,
+     * @return int 4 if amount is greater than 1000, return 5 if amount is too small (less than 0.5)
+     * 
+     */
+    public int etransfer(double amount, String receiverEmail, CA customer, String accountFrom) {
+        if (amount < 0.5)
+        {
+            return 5;
+        }
 
+        CA receiverAccount = customerHash.get(receiverEmail);
+
+        // Check if receiver email is valid
+        if (!validEmail(receiverEmail)){
+            return 1;
+        }
+
+        // Check if the amount is greater than 1000
+        if (amount > 1000)
+        {
+            return 4;
+        }
+
+        // Check if the sender has enough money to send
+        if (accountFrom.equals("Chequing") && amount > customer.getChequing()) {
+
+            return 2;
+
+        // Check if the sender has enough money to send
+        } else if (accountFrom.equals("Savings") && amount > customer.getSavings()) {
+
+            return 2;
+        }
+        // If all checks pass, transfer the money and receiver's account is valid
+        else
+        {
+            Random rand = new Random();
+            int idSender = rand.nextInt(500);
+            int idReceiver = rand.nextInt(500);
+            if (receiverAccount == null) {
+                Transaction transaction = new Transaction(customer.email, receiverEmail, amount, idSender);
+                if (accountFrom.equals("Chequing"))
+                {
+                    transaction.setAccountFrom("Chequing");
+                    transaction.setSenderRemaining(customer.getChequing() - amount);
+
+                    customer.setChequing(customer.getChequing() - amount);
+                    customer.addChequing(transaction);
+                }
+                else
+                {
+                    transaction.setAccountFrom("Savings");
+                    transaction.setSenderRemaining(customer.getSavings() - amount);
+
+                    customer.setSavings(customer.getSavings() - amount);
+                    customer.addSaving(transaction);
+                }
+                return 3;
+            }
+            else
+            {
+                Transaction senderTransaction = new Transaction(customer.email, receiverEmail, amount, idSender);
+                if (accountFrom.equals("Chequing"))
+                {
+                    senderTransaction.setAccountFrom("Chequing");
+
+                    Transaction receiverTransaction = new Transaction(customer.email, receiverEmail, amount, idReceiver);
+                    senderTransaction.setSenderRemaining(customer.getChequing() - amount);
+                    receiverTransaction.setReceiverRemaining(customer.getSavings() + amount);
+
+                    customer.setChequing(customer.getChequing() - amount);
+                    customer.addChequing(senderTransaction);
+                    receiverAccount.setChequing(receiverAccount.getChequing() + amount);
+                    receiverAccount.addChequing(receiverTransaction);
+                }
+                else
+                {
+                    senderTransaction.setAccountFrom("Savings");
+
+                    Transaction receiverTransaction = new Transaction(customer.email, receiverEmail, amount, idReceiver);
+                    senderTransaction.setSenderRemaining(customer.getChequing() - amount);
+                    receiverTransaction.setReceiverRemaining(customer.getChequing() + amount);
+
+                    customer.setSavings(customer.getSavings() - amount);
+                    customer.addSaving(senderTransaction);
+                    receiverAccount.setChequing(receiverAccount.getChequing() + amount);
+                    receiverAccount.addChequing(receiverTransaction);
+
+                }
+            }
+        }
+
+        return 0;
     }
 
-    public void logout()
+
+    /*
+     * This function allows users to transfer money to another user's account using their bank number
+     * @param double amount: amount of money to transfer
+     * @param String receiverAcc: bank number of the receiver
+     * @param CA customer: the customer who is sending the money
+     * @param String accountFrom: the account the money is being sent from
+     * @return int 0 if successful, 1 if receiver account is invalid, 2 if insufficient funds, 3 if receiver is not in BCS,
+     * @return 5 if amount is less than 0.5
+     * 
+     */
+    public int bankTransfer(double amount, String receiverAcc, CA customer, String accountFrom)
     {
+        if (amount < 0.5)
+        {
+            return 5;
+        }
+
+
+        // Check if receiver account is valid
+        if (receiverAcc.length() != 5) {
+
+            return 1;
+
+        // Check if customer has sufficient funds in chequing
+        } else if (accountFrom.equals("Chequing") && amount > customer.getChequing()) {
+
+            return 2;
+
+        // Check if customer has sufficient funds in savings
+        } else if (accountFrom.equals("Savings") && amount > customer.getSavings()) {
+
+            return 2;
+
+        }
+    
+        CA receiver = null;
+    
+        // Find the receiver account
+        for (CA cust : customerAccounts) {
+            //cust.print();
+            System.out.println(cust.getBankNumber());
+
+            if (cust.getBankNumber().equals(receiverAcc)) {
+
+                receiver = cust;
+
+            }
+        }
+
+        Random rand = new Random();
+        int idSender = rand.nextInt(500);
+        int idReceiver = rand.nextInt(500);
+
+        // Subtract the amount from the customer's account and add it to the receiver's account (chequing / savings)
+        if (accountFrom.equals("Chequing")) {
+            Transaction transaction = new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,idSender);
+            transaction.setAccountFrom("Chequing");
+            transaction.setSenderRemaining(customer.getChequing() - amount);
+
+            customer.setChequing(customer.getChequing() - amount);
+            customer.addChequing(transaction);
+        } else if (accountFrom.equals("Savings")) {
+            Transaction transaction = new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,idSender);
+            transaction.setAccountFrom("Savings");
+            transaction.setSenderRemaining(customer.getSavings() - amount);
+
+            customer.setSavings(customer.getSavings() - amount);
+            customer.addSaving(transaction);
+        }// Add the amount to the receiver's account (chequing auto-deposit)
+        if (receiver != null){
+            Transaction receiverTrans = new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,idReceiver);
+            receiverTrans.setReceiverRemaining(customer.getChequing() + amount);
+
+            receiver.setChequing(receiver.getChequing() + amount);
+            receiver.addChequing(receiverTrans);
+
+            return 0;
+        }
+        else
+        {
+            // Signify external transaction
+            return 3;
+        }
+    }
+
+    /*
+     * This method is used to return a list of addresses for the customer to 
+     * choose from when visiting a branch.
+     * 
+     */
+    public ArrayList<String> addresses() {
+        ArrayList<String> locationList = new ArrayList<>();
+
+        locationList.add("10153 King George Blvd, Vancouver, BC");
+        locationList.add("255 Yonge Street, Toronto, ON");
+        locationList.add("2210 Bank Street, Ottawa, ON");
+        locationList.add("1955 Chandler Road, New York City, NY");
+        locationList.add("21 Lovecraft Lane, Montreal, QC");
+        locationList.add("1965 Herbert Blvd, Halifax, NS");
+
+        return locationList; 
+    }
+
+    /*
+     * This method is used for logout. It is used to save the customer accounts to a file.
+     * It will save the customer accounts to a file called People.ser, DO NOT TOUCH THIS METHOD.
+     * 
+     */
+    public void logout() {
 
         long startTime = System.currentTimeMillis();
 
